# easyrcv

./: .gitignore  .gitmodules  config.py  pyproject.toml  rcv.ipynb  run.py  tabulate.ipynb  tabulate.py
random/: PCC 11.xlsx  RankUse.xlsx  Tabulations.xlsx  analysis.ipynb
src/easyrcv/: config.py  tabulate.py
src/pyrcv/: config.py  tabulate.py
test/: test_brightspots.py
