
[tool.poetry]
name = "pyrcv"
version = "0.1.0"
description = "Simple universal RCV tabulator"
authors = ["Kevin McDonough <kmacdough@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.23.3"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "test"
]
pythonpath = [
  "src"
]